# BongoCat

./: .gitignore  .npmrc  .pnpmrc  .pnpmrc-approved.json  Cargo.toml  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  uno.config.ts  vite.config.ts
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-06-07-pomodoro.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/plugins/admin-status/: Cargo.toml  build.rs
src-tauri/src/plugins/admin-status/permissions/: default.toml
src-tauri/src/plugins/admin-status/src/: lib.rs
src-tauri/src/plugins/admin-status/src/commands/: mod.rs
src-tauri/src/plugins/window/: Cargo.toml
src/assets/css/: global.scss
src/components/memo-panel/: index.vue
src/components/pomodoro-timer/: index.vue
src/components/pro-list/: index.vue
src/components/pro-list-item/: index.vue
src/components/shortcut/: index.vue
src/components/update-app/: index.vue
src/composables/: useAppMenu.ts  useGamepad.ts  useModel.ts  usePomodoro.ts
src/locales/: en-US.json  index.ts  pt-BR.json  vi-VN.json  zh-CN.json  zh-TW.json
src/pages/main/: index.vue
src/pages/preference/: index.vue
src/pages/preference/components/about/: index.vue
src/pages/preference/components/cat/: index.vue
src/pages/preference/components/general/: index.vue
src/pages/preference/components/memo/: index.vue
src/plugins/: adminStatus.ts
src/stores/: general.ts  memo.ts  pomodoro.ts  shortcut.ts
(+11 files in other folders)
